# pytest-operator

./: .gitignore  CONTRIBUTING.md  README.md  pydoc-markdown.yml  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/workflows/: publish.yaml  tests.yaml
docs/: index.md  reference.md
fixtures/new-style-charm/: README.md  actions.yaml  config.yaml
fixtures/new-style-charm/tests/: test_charm.py
fixtures/test-charm/: metadata.yaml
fixtures/test-charm/reactive/: test_charm.py
fixtures/test-charm/tests/: 10-deploy
pytest_operator/: __init__.py  cos.py  plugin.py  plugin.py.orig  relation_data.py  shims.py
tests/: test_pytest_operator.py
tests/data/: build_resources.sh  build_resources_errors.sh  etcd_ch_api_response.json  model-config.yaml
tests/data/charms/operator-framework/: charmcraft.yaml  metadata.yaml  requirements.txt
tests/data/charms/operator-framework/src/: charm.py
tests/data/charms/reactive-framework/: layer.yaml  metadata.yaml  wheelhouse.txt
tests/data/charms/reactive-framework/reactive/: reactive_framework.py
tests/data/charms/reactive-framework/reactive/relations/unique-test-relation/: requires.py
tests/data/charms/resourced-charm/: README.md  metadata.yaml
tests/data/test_lib/: setup.py
tests/integration/: test_add_k8s.py  test_cos.py  test_opstest_add_k8s.py  test_pytest_operator.py
tests/unit/: conftest.py  test_cos.py  test_pytest_operator.py
